--- a/styles.css
+++ b/styles.css
@@ -23,7 +23,7 @@ h2{
 .section1{
     display: flex;
     flex-direction: column;
-    padding: 0 140px 80px;
+    padding: 30px 140px 80px;
     margin: 0;
     flex: 1;
     background-color: #1F2937;
@@ -92,10 +92,9 @@ a{
 }
 .section4{
     background-color:#FFFFFF;
-    padding: 80px;
+    padding: 150px;
     display: flex;
     justify-content: center;
-
 }
 .signup{
     display: flex;
@@ -115,11 +114,12 @@ footer{
     justify-content: center;
     align-items: center;
     padding: 15px;
+
 }
 h3{
     font-weight: 900;
     display: flex;
-    justify-content: flex-end;
+    justify-content: flex-start;
 }
 .content-box{
     width: 180px;
